addded basic Battle service
